# SRI_model

./: CMakeLists.txt  README.md
include/: sri_model.h
src/: main.cpp  test_sri.cpp
